# rubiks-solver

./: .gitignore  CMakeLists.txt  README.md  main.cpp
classes/: cube.cpp  cube.h  testsuite.cpp  testsuite.h
